SERVER-47410 Preserve error codes in ShardServerCatalogCacheLoader